[tool.poetry]
name = "memedex-backend"
version = "0.1.0"
description = "Simple image uploader for personal purpose"
authors = ["Jaeyeol Lee <rijgndqw012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
